# diffvg

./: .gitignore  CMakeLists.txt  README.md  diffvg.cpp  diffvg.h  requirements.txt  sample_boundary.h  scene.cpp  setup.py  shape.h  winding_number.h
pydiffvg/: __init__.py
